<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminDashboardActivity"
    android:background="@color/white">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp">

        <!-- Menu Icon -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_back_btn"
            android:contentDescription="@string/menu_icon_description"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/menu_home" />

        <!-- Background Taco Image -->
        <ImageView
            android:id="@+id/background_taco"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="-20dp"
            android:contentDescription="@string/background_image_description"
            android:rotation="-10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_assest1" />

        <!-- Hello Text -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!-- Foodie Text -->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/admin"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <!-- Prompt Text -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="286dp"
            android:layout_height="83dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/dancingscript"
            android:text="@string/which_indian_food_would_you_like_to_cook"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!-- Search EditText -->
        <EditText
            android:id="@+id/editTextText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edittext_border"

            android:ems="10"
            android:focusable="false"
            android:fontFamily="@font/poppinslight"
            android:hint="@string/search_recipe"
            android:inputType="none"
            android:paddingStart="47dp"
            android:textColor="#5A5858"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!-- Search Icon -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/search_icon_description"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="@+id/editTextText"
            app:layout_constraintTop_toTopOf="@+id/editTextText"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/search_ic" />

        <!-- Categories Label -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <!-- Categories Horizontal Scroll -->
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:fadeScrollbars="true"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <!-- Salad Category -->
                <ImageView
                    android:id="@+id/salad"
                    style="@style/my_style"
                    android:background="@drawable/edittext_border"

                    android:contentDescription="@string/salad_category_description"
                    app:srcCompat="@drawable/category_salad" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/salad"
                    android:layout_alignStart="@+id/salad"
                    android:layout_alignEnd="@+id/salad"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="-23dp"
                    android:fontFamily="@font/poppinslight"
                    android:gravity="center"
                    android:text="@string/salad"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <!-- Main Dish Category -->
                <ImageView
                    android:id="@+id/MainDish"
                    style="@style/my_style"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/salad"
                    android:background="@drawable/edittext_border"
                    android:contentDescription="@string/main_dish_category_description"
                    app:srcCompat="@drawable/category_main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MainDish"
                    android:layout_alignStart="@+id/MainDish"
                    android:layout_alignEnd="@+id/MainDish"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="-23dp"
                    android:fontFamily="@font/poppinslight"
                    android:gravity="center"
                    android:text="@string/main"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <!-- Drinks Category -->
                <ImageView
                    android:id="@+id/Drinks"
                    style="@style/my_style"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/MainDish"
                    android:background="@drawable/edittext_border"
                    android:contentDescription="@string/drinks_category_description"
                    app:srcCompat="@drawable/catergory_drinks" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Drinks"
                    android:layout_alignStart="@+id/Drinks"
                    android:layout_alignEnd="@+id/Drinks"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="-23dp"
                    android:fontFamily="@font/poppinslight"
                    android:gravity="center"
                    android:text="@string/beverage"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <!-- Desserts Category -->
                <ImageView
                    android:id="@+id/Desserts"
                    style="@style/my_style"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/Drinks"
                    android:background="@drawable/edittext_border"
                    android:contentDescription="@string/desserts_category_description"
                    app:srcCompat="@drawable/category_dessert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Desserts"
                    android:layout_alignStart="@+id/Desserts"
                    android:layout_alignEnd="@+id/Desserts"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="-23dp"
                    android:fontFamily="@font/poppinslight"
                    android:gravity="center"
                    android:text="@string/desserts"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <!-- Snacks Category -->
                <ImageView
                    android:id="@+id/Snacks"
                    style="@style/my_style"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/Desserts"
                    android:background="@drawable/edittext_border"
                    android:contentDescription="@string/snacks_category_description"
                    app:srcCompat="@drawable/snacks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Snacks"
                    android:layout_alignStart="@+id/Snacks"
                    android:layout_alignEnd="@+id/Snacks"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="-23dp"
                    android:fontFamily="@font/poppinslight"
                    android:gravity="center"
                    android:text="@string/snacks"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </HorizontalScrollView>

        <!-- Popular Recipes Label -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/popular_recipes"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <!-- Popular Recipes RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:listitem="@layout/popular_rv_items" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:itemIconTint="@color/green"
        app:menu="@menu/admin_menu"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/black"/>

</androidx.drawerlayout.widget.DrawerLayout>